# pulse-fl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  justfile  package-lock.json  package.json
.agents/: AGENTS.md
.agents/skills/pulse-fl/: SKILL.md
apps/backend/: .gitignore  Dockerfile  JUST.md  README.md  docker-compose.yml  example.env  justfile  main.py  pyproject.toml
apps/backend/scripts/: generate_mock_data.py  simulate_client.py  test_websocket_stream.py
apps/backend/src/better_pulse/: config.py  database.py  main.py
apps/backend/src/better_pulse/aggregation/: strategy.py
apps/backend/src/better_pulse/models/: export_executorch.py  factory.py
apps/backend/src/better_pulse/repositories/: __init__.py  alert_repo.py  client_repo.py  contribution_repo.py  round_repo.py
apps/backend/src/better_pulse/server/: api.py
apps/backend/src/better_pulse/services/: notification_service.py
apps/backend/src/pulse_fl/: config.py  database.py  main.py
apps/backend/src/pulse_fl/aggregation/: strategy.py
apps/backend/src/pulse_fl/models/: ecg_net.py  export_executorch.py  factory.py
apps/backend/src/pulse_fl/repositories/: __init__.py  alert_repo.py  client_repo.py  contribution_repo.py  round_repo.py
apps/backend/src/pulse_fl/schemas/: db_models.py
apps/backend/src/pulse_fl/server/: api.py  websocket_manager.py
apps/backend/src/pulse_fl/services/: notification_service.py
apps/mobile/: .gitignore  App.tsx  Dockerfile  README.md  app.json  package-lock.json  package.json
(+9 files in other folders)
