[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-pulse"
version = "0.1.0"
description = "Federated Learning & Wearable Cardiac Anomaly Monitoring Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "safetensors>=0.8.0",
    "sqlmodel>=0.0.39",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
    "psycopg2-binary>=2.9.12",
    "websockets>=16.1",
    "httpx>=0.28.1",
]

[project.scripts]
better-pulse = "better_pulse.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/better_pulse"]
